--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -28,10 +29,8 @@
     <module>expression-model</module>
     <module>expression-dao</module>
     <module>expression-service</module>
+    <module>expression-rest</module>
   </modules>
-
-  <!-- <build> <plugins> <plugin> <groupId>org.springframework.boot</groupId> 
-    <artifactId>spring-boot-maven-plugin</artifactId> </plugin> </plugins> </build> -->
 
   <profiles>
     <profile>
@@ -66,6 +65,11 @@
       <dependency>
         <groupId>${project.groupId}</groupId>
         <artifactId>expression-dao</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>${project.groupId}</groupId>
+        <artifactId>expression-service</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
