--- a/expression-rest/pom.xml
+++ b/expression-rest/pom.xml
@@ -8,10 +8,10 @@
     <artifactId>expression-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
   </parent>
-  
+
   <artifactId>expression-rest</artifactId>
   <name>Expression Rest API</name>
-  
+
   <build>
     <plugins>
       <plugin>
@@ -25,6 +25,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
